--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.12.5-alpha.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.10.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
